# eduardoos.com_20260619

./: .cursorrules  .env.example  .gitignore  Cargo.toml  EC2-AMAZON-LINUX-SETUP.txt  README.md  docker-compose.ec2.yml  docker-compose.yml  go.mod  go.sum  package.json
.github/workflows/: authenticator.yml  backend.yml  chatbot.yml  database.yml  deploy.yml  documents.yml  frontend.yml  microservices.yml  payments.yml  s3.yml  telemetry.yml  tester.yml
backend/: Cargo.toml  Dockerfile
backend/src/: handlers.rs  main.rs  middleware.rs  routes.rs  state.rs
cmd/authenticator/: main.go
cmd/backend/: main.go  media.go  pamphlet_images.go  pamphlets.go  playlists.go
cmd/chatbot/: main.go
cmd/database/: main.go
cmd/documents/: main.go  pamphlet_handlers.go  pamphlet_mutations.go  pamphlet_mutations_test.go  pamphlet_registry_handlers.go
cmd/payments/: main.go
cmd/s3/: main.go
cmd/telemetry/: main.go
cmd/tester/: main.go
crates/common/: Cargo.toml
crates/common/src/: error.rs  flight_log.rs  internal_token.rs  lib.rs  middleware.rs  telemetry.rs
deploy/aws/: README.md  create-observability-tables.sh  create-playlists-table.sh  ec2-iam-policy.json
deploy/ec2/: deploy-remote.sh  issue-cert.sh  report-build-tests.sh
docker/: golang-service.Dockerfile
frontend/: Dockerfile  astro.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/: env.d.ts
frontend/src/components/: AuthForm.css  AuthForm.tsx  Header.astro  Header.css  ThemeToggle.css  ThemeToggle.tsx
frontend/src/components/ActivityBar/: ActivityBar.css  ActivityBar.test.tsx  ActivityBar.tsx
frontend/src/components/AuthGate/: AuthGate.tsx
frontend/src/components/GlobalPlayer/: GlobalPlayer.css  GlobalPlayer.tsx
frontend/src/components/Header/: Header.css  Header.tsx
frontend/src/components/LoggerPanel/: LoggerDashboard.css  LoggerDashboard.tsx  LoggerPanel.css  LoggerPanel.tsx
frontend/src/components/MediaGallery/: MediaGallery.css  MediaGallery.tsx
frontend/src/components/PageBackground/: PageBackground.astro  PageBackground.css
frontend/src/components/PamphletEditor/: PamphletActivityBar.css  PamphletActivityBar.tsx  PamphletEditor.css  PamphletEditor.tsx
frontend/src/components/PamphletV2/: PamphletV2.css  PamphletV2.test.tsx  PamphletV2.tsx  PamphletV2Page.css  PamphletV2Page.tsx  pamphlet-print.css
frontend/src/components/PayPalSubscriptionForm/: PayPalSubscriptionForm.css  PayPalSubscriptionForm.tsx
frontend/src/components/PlaylistBuilder/: PlaylistBuilder.css  PlaylistBuilder.tsx  PlaylistControls.css  PlaylistControls.tsx  PlaylistIcons.tsx
frontend/src/components/TesterPanel/: TesterDashboard.css  TesterDashboard.tsx  TesterPanel.css  TesterPanel.tsx
frontend/src/config/: audioPlaylist.ts  homeLayout.test.ts  homeLayout.ts  routes.ts
frontend/src/layouts/: BaseLayout.astro  BaseLayout.css
frontend/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  formatTime.test.ts  formatTime.ts  media.ts  mediaLibrary.test.ts  mediaLibrary.ts  observability.test.ts  observability.ts  offlineAudio.test.ts  offlineAudio.ts  pamphletDebug.ts  pamphlets.test.ts  pamphlets.ts  payments.test.ts  payments.ts  playlists.ts  routeAccess.test.ts  routeAccess.ts  telemetry.test.ts  telemetry.ts  validation.test.ts  validation.ts
frontend/src/pages/: index.astro  index.css
frontend/src/pages/auth/: login.astro  register.astro  verify-otp.astro
frontend/src/pages/documents/: pamphlet-v2.astro  pamphlet.astro
frontend/src/pages/media/: gallery.astro  playlist.astro
frontend/src/pages/observability/: logger.astro  observability.css  tester.astro
frontend/src/styles/: buttons.css  chrome.css  global.css  headings.css  pages.css  theme.css
microservices/authenticator/: Cargo.toml  Dockerfile
microservices/authenticator/src/: handlers.rs  main.rs  middleware.rs  routes.rs  state.rs
microservices/chatbot/: Cargo.toml  Dockerfile
microservices/chatbot/src/: handlers.rs  main.rs  middleware.rs  routes.rs  state.rs
microservices/database/: Cargo.toml  Dockerfile
microservices/database/src/: handlers.rs  main.rs  routes.rs  state.rs  storage.rs
microservices/documents/: Cargo.toml  Dockerfile
microservices/documents/src/: handlers.rs  main.rs  pdf.rs  routes.rs
microservices/payments/: Cargo.toml  Dockerfile
microservices/payments/src/: handlers.rs  main.rs  models.rs  paypal.rs  repository.rs  routes.rs  state.rs
microservices/s3/: Cargo.toml  Dockerfile
microservices/s3/src/: handlers.rs  main.rs  object_store.rs  routes.rs  state.rs
microservices/telemetry/: Cargo.toml  Dockerfile
microservices/telemetry/src/: analytics.rs  handlers.rs  main.rs  routes.rs  state.rs
microservices/tester/: Cargo.toml  Dockerfile
microservices/tester/src/: handlers.rs  main.rs  models.rs  routes.rs  state.rs
nginx/: default.conf
pkg/authstore/: store.go  store_test.go
pkg/common/: env.go  flightlog.go  httputil.go  internaltoken.go  internaltoken_test.go  jwt.go  jwt_test.go  telemetry.go
pkg/dynamodb/: pamphlet_registry.go  pamphlets.go  pamphlets_test.go  playlists.go  playlists_test.go
pkg/obsstore/: dynamo.go  hub.go  memory.go  sse.go  store.go
pkg/pamphlet/: blocks.go  capacity.go  constants.go  document.go  document_store.go  flow.go  flow_extended.go  geometry.go  height.go  highlight.go  highlight_ranges.go  highlight_ranges_test.go  images.go  images_test.go  layout_config.go  memory_store.go  page1_layout.go  page1_layout_test.go  pamphlet_test.go  parse.go  registry.go  registry_memory.go  render.go  render_spacing_test.go  store.go
pkg/pamphlet/data/: content.json  footer.json  header.json
pkg/pdf/: pdf.go  pdf_test.go
pkg/s3store/: absolute.go  audio.go  audio_test.go  aws.go  handlers.go  handlers_images_test.go  handlers_test.go  meta.go  meta_path_test.go  meta_test.go  sanitize.go  sanitize_test.go  store.go  store_test.go  stub.go  stub_persist.go
scripts/: generate-secrets.mjs  upload-public-media.mjs  upload-worship-playlists.mjs
(+1 files in other folders)
