[workspace]
resolver = "2"
members = [
    "crates/common",
    "backend",
    "microservices/database",
    "microservices/documents",
    "microservices/authenticator",
    "microservices/telemetry",
    "microservices/s3",
    "microservices/chatbot",
    "microservices/tester",
    "microservices/payments",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eduardo OS"]

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2"
jsonwebtoken = "9"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
common = { path = "crates/common" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
