[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
common = { workspace = true }
http = "1"

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
axum = { workspace = true }
http-body-util = "0.1"
