[package]
name = "authenticator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "authenticator"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
lettre = { workspace = true }
common = { workspace = true }
uuid = { workspace = true }
rand = "0.9"

[dev-dependencies]
tokio = { workspace = true }
