[package]
name = "database"
version.workspace = true
edition.workspace = true

[[bin]]
name = "database"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
common = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
