[package]
name = "payments"
version.workspace = true
edition.workspace = true

[[bin]]
name = "payments"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
common = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true }
