[package]
name = "s3"
version.workspace = true
edition.workspace = true

[[bin]]
name = "s3"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
common = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
