[package]
name = "telemetry"
version.workspace = true
edition.workspace = true

[[bin]]
name = "telemetry"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
common = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
